# code-while-shit

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.omc/: prd.json
.omc/plans/: vcws-v0.2-consensus-plan.md
.omc/specs/: deep-interview-v0.2.md
.omx/verification/feishu-0-1-release/: worker-3-task-5-context.txt  worker-3-task-5-final-context.txt  worker-3-task-5-final-summary.md  worker-3-task-5-final-unittest.txt  worker-3-task-5-summary.md  worker-3-task-5-unittest.txt  worker-3-task-7-context.txt  worker-3-task-7-summary.md  worker-3-task-7-unittest.txt
scripts/: install.sh
src/codewhileshit/: channels.py  codex_app_server.py  feishu.py  feishu_cards.py  models.py  service.py  service_runtime.py  state.py
src/cws/: __init__.py  __main__.py  codex_app_server.py  config.py  feishu.py  feishu_cards.py  feishu_events.py  lockfile.py  service.py  service_runtime.py  terminal_sink.py  user_config.py
src/cws/agents/: __init__.py  claude_code.py  codex.py
src/vcws/: __main__.py  codex_app_server.py  config.py  lockfile.py  models.py  policy.py  service.py  state.py
src/vcws/agents/: base.py  claude_code.py  codex.py  opencode.py
tests/: test_agent_parity.py  test_claude_code_backend.py  test_cli_flags.py  test_codex_app_server.py  test_config_factory.py  test_contracts.py  test_feishu.py  test_lockfile.py  test_main_lockfile.py  test_opencode_backend.py  test_policy.py  test_quick_start.py  test_regression_0_1.py  test_service.py  test_service_stop_commands.py  test_state.py  test_state_migration.py  test_stop_all.py  test_terminal_sink.py  test_user_config.py
