[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coding-while-shit"
version = "0.1.0"
description = "Feishu-driven remote Codex bridge MVP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex"}]
dependencies = [
  "lark-oapi==1.5.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
