[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coding-while-shit"
version = "0.2.0"
description = "Feishu-driven remote agent bridge (codex / claude-code / opencode) MVP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex"}]
dependencies = [
  "lark-oapi==1.5.3",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
vcws = "vcws.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
