[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-while-shit"
version = "0.2.1"
description = "Feishu-driven remote agent bridge (codex / claude-code / opencode) MVP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex"}]
dependencies = [
  "lark-oapi==1.5.3",
  "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
# Kept for backward compatibility with `pip install 'code-while-shit[claude]'`.
# claude-agent-sdk is now a base dependency, so this extra is a no-op.
claude = []

[project.scripts]
cws = "cws.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
